--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -137,7 +137,11 @@
             Grid.Column="1" 
             BorderThickness="3"
             MinHeight="700" UniformCornerRadius="0" Margin="5,0,0,0">
-            <StackPanel>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="400"/>
+                    <RowDefinition Height="300"/>
+                </Grid.RowDefinitions>
                 <DataGrid x:Name="dgPedidos"
                           ItemsSource="{Binding Vendas/Pedidos}"
                           AutoGenerateColumns="False" 
@@ -152,7 +156,7 @@
                           Style="{DynamicResource DatagridCustomMDesign}" 
                           CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
                           RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                          ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" SelectionMode="Single" Height="171">
+                          ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" SelectionMode="Single" Margin="5" VerticalAlignment="Top" Height="390" Width="520">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="PED" 
                                             Binding="{Binding NumPedido, Converter={StaticResource PedNumConverter}}" 
@@ -187,10 +191,10 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <GroupBox Header="TOTAL" 
-                          Style="{DynamicResource MaterialDesignGroupBox}" Margin="16" MDesign:ColorZoneAssist.Mode="Accent">
+                          Style="{DynamicResource MaterialDesignGroupBox}" Margin="5" MDesign:ColorZoneAssist.Mode="PrimaryMid" Grid.Row="1">
                     <TextBlock>My TOTALS</TextBlock>
                 </GroupBox>
-            </StackPanel>
+            </Grid>
         </MDesign:Card>
         <MDesign:Card 
             Grid.Column="2" 
