--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -142,57 +142,60 @@
                     <RowDefinition Height="400"/>
                     <RowDefinition Height="300"/>
                 </Grid.RowDefinitions>
-                <DataGrid x:Name="dgPedidos"
-                          ItemsSource="{Binding Vendas/Pedidos}"
-                          AutoGenerateColumns="False" 
-                          CanUserAddRows="False" 
-                          CanUserResizeColumns="False" 
-                          CanUserReorderColumns="False" 
-                          CanUserDeleteRows="False" 
-                          CanUserResizeRows="False" 
-                          IsReadOnly="True" 
-                          HeadersVisibility="Column"
-                          IsSynchronizedWithCurrentItem="True" 
-                          Style="{DynamicResource DatagridCustomMDesign}" 
-                          CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                          RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                          ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" SelectionMode="Single" Margin="5" VerticalAlignment="Top" Height="390" Width="520">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="PED" 
-                                            Binding="{Binding NumPedido, Converter={StaticResource PedNumConverter}}" 
-                                            CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                                            CanUserResize="False" />
-                        <DataGridTextColumn Header="ROTA" 
-                        Binding="{Binding Pasta, Converter={StaticResource RotaConverter3}}"                                         
-                        CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                        CanUserResize="False" />
-                        <DataGridTextColumn Header="CLIENTE" 
-                        CanUserResize="False" 
-                        Width="70">
-                            <DataGridTextColumn.Binding>
-                                <MultiBinding StringFormat=" {0}-{1}">
-                                    <Binding Path="Cliente.RegiaoCliente" />
-                                    <Binding Path="Cliente.NumCliente" />
-                                </MultiBinding>
-                            </DataGridTextColumn.Binding>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="R. SOCIAL" 
-                        Binding="{Binding Cliente.Razao}" 
-                        CanUserResize="False" 
-                        Width="200" />
-                        <DataGridTextColumn Header="VAL. PED" 
-                        Binding="{Binding Items, Converter={StaticResource TotalValItemsConverter}}" 
-                        CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
-                        CanUserResize="False"
-                        Width="80" />
-                        <DataGridTextColumn Header="PESO"  
-                        CanUserResize="False"
-                        Width="80" />
-                    </DataGrid.Columns>
-                </DataGrid>
+                <GroupBox Header="PEDIDOS" 
+                          Margin="5" Style="{DynamicResource MaterialDesignGroupBox}" MDesign:ColorZoneAssist.Mode="PrimaryMid">
+                    <DataGrid x:Name="dgPedidos"
+                        ItemsSource="{Binding Vendas/Pedidos}"
+                        AutoGenerateColumns="False" 
+                        CanUserAddRows="False" 
+                        CanUserResizeColumns="False" 
+                        CanUserReorderColumns="False" 
+                        CanUserDeleteRows="False" 
+                        CanUserResizeRows="False" 
+                        IsReadOnly="True" 
+                        HeadersVisibility="Column"
+                        IsSynchronizedWithCurrentItem="True" 
+                        Style="{DynamicResource DatagridCustomMDesign}" 
+                        CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+                        RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                        ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" SelectionMode="Single" Margin="0,0,10,0" VerticalAlignment="Top" Height="390" Width="520">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="PED" 
+                                Binding="{Binding NumPedido, Converter={StaticResource PedNumConverter}}" 
+                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                CanUserResize="False" />
+                            <DataGridTextColumn Header="ROTA" 
+                                Binding="{Binding Pasta, Converter={StaticResource RotaConverter3}}"                                         
+                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                CanUserResize="False" />
+                            <DataGridTextColumn Header="CLIENTE" 
+                                CanUserResize="False" 
+                                Width="70">
+                                <DataGridTextColumn.Binding>
+                                    <MultiBinding StringFormat=" {0}-{1}">
+                                        <Binding Path="Cliente.RegiaoCliente" />
+                                        <Binding Path="Cliente.NumCliente" />
+                                    </MultiBinding>
+                                </DataGridTextColumn.Binding>
+                            </DataGridTextColumn>
+                            <DataGridTextColumn Header="R. SOCIAL" 
+                                Binding="{Binding Cliente.Razao}" 
+                                CanUserResize="False" 
+                                Width="200" />
+                            <DataGridTextColumn Header="VAL. PED" 
+                                Binding="{Binding Items, Converter={StaticResource TotalValItemsConverter}}" 
+                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                CanUserResize="False"
+                                Width="80" />
+                            <DataGridTextColumn Header="PESO"  
+                                CanUserResize="False"
+                                Width="80" />
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </GroupBox>
                 <GroupBox Header="TOTAL" 
                           Style="{DynamicResource MaterialDesignGroupBox}" Margin="5" MDesign:ColorZoneAssist.Mode="PrimaryMid" Grid.Row="1">
-                    <TextBlock>My TOTALS</TextBlock>
+                    <TextBlock><Run Text="My TOTALS"/></TextBlock>
                 </GroupBox>
             </Grid>
         </MDesign:Card>
