--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -136,14 +136,16 @@
         <MDesign:Card 
             Grid.Column="1" 
             BorderThickness="3"
-            MinHeight="700" UniformCornerRadius="0" Margin="5,0,0,0">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="400"/>
-                    <RowDefinition Height="300"/>
-                </Grid.RowDefinitions>
-                <GroupBox Header="PEDIDOS" 
-                          Margin="5" Style="{DynamicResource MaterialDesignGroupBox}" MDesign:ColorZoneAssist.Mode="PrimaryMid">
+            MinHeight="700" 
+            UniformCornerRadius="0" 
+            Margin="5,0,0,0">
+            <GroupBox Header="PEDIDOS" 
+                          Margin="3"
+                          MDesign:ShadowAssist.ShadowDepth="Depth1"
+                          Style="{DynamicResource MaterialDesignGroupBox}" 
+                          MDesign:ColorZoneAssist.Mode="PrimaryMid" 
+                          BorderThickness="0">
+                <StackPanel>
                     <DataGrid x:Name="dgPedidos"
                         ItemsSource="{Binding Vendas/Pedidos}"
                         AutoGenerateColumns="False" 
@@ -158,7 +160,8 @@
                         Style="{DynamicResource DatagridCustomMDesign}" 
                         CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
                         RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                        ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" SelectionMode="Single" Margin="0,0,10,0" VerticalAlignment="Top" Height="390" Width="520">
+                        ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+                              SelectionMode="Single" VerticalAlignment="Top">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="PED" 
                                 Binding="{Binding NumPedido, Converter={StaticResource PedNumConverter}}" 
@@ -192,12 +195,32 @@
                                 Width="80" />
                         </DataGrid.Columns>
                     </DataGrid>
-                </GroupBox>
-                <GroupBox Header="TOTAL" 
-                          Style="{DynamicResource MaterialDesignGroupBox}" Margin="5" MDesign:ColorZoneAssist.Mode="PrimaryMid" Grid.Row="1">
-                    <TextBlock><Run Text="My TOTALS"/></TextBlock>
-                </GroupBox>
-            </Grid>
+                    <Separator 
+                            Style="{StaticResource MaterialDesignDarkSeparator}" 
+                            Margin="8 0 8 0"/>
+                    <ListView Background="#585858" Width="300" HorizontalAlignment="Left">
+                        <ListViewItem>
+                            <Grid Margin="15,5">
+                                <Expander Grid.Row="1">
+                                    <Expander.Header>
+                                        <TextBlock Foreground="#FFABADB3" Text="MenuTitle" FontSize="20" Grid.Row="0"/>
+                                    </Expander.Header>
+                                    <StackPanel 
+                                Orientation="Vertical"
+                                TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
+                                Margin="5">
+                                        <DataGrid ItemsSource="{Binding Vendas}"/>
+                                        <MDesign:Card 
+                                    Height="50" 
+                                    Margin="0,0,0,5"
+                                    MDesign:ShadowAssist.ShadowDepth="Depth0"/>
+                                    </StackPanel>
+                                </Expander>
+                            </Grid>
+                        </ListViewItem>
+                    </ListView>
+                </StackPanel>
+            </GroupBox>
         </MDesign:Card>
         <MDesign:Card 
             Grid.Column="2" 
