--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -35,6 +35,7 @@
         <Model:SituacaoCNPJIconVendBackgroundConverter x:Key="SituacaoCNPJIconVendBackgroundConverter"/>
         <Model:StringToIntConverter x:Key="StringToIntConverter"/>
         <Model:PedNumConverter x:Key="PedNumConverter"/>
+        <Model:TotalVendasConverter x:Key="TotalVendasConverter"/>
     </UserControl.Resources>
 
     <Grid>
@@ -138,30 +139,44 @@
             BorderThickness="3"
             MinHeight="700" 
             UniformCornerRadius="0" 
-            Margin="5,0,0,0">
+            Margin="5,0,0,0"
+            DataContext="{Binding Vendas}" Width="530" Height="700">
             <GroupBox Header="PEDIDOS" 
                           Margin="3"
                           MDesign:ShadowAssist.ShadowDepth="Depth1"
                           Style="{DynamicResource MaterialDesignGroupBox}" 
                           MDesign:ColorZoneAssist.Mode="PrimaryMid" 
                           BorderThickness="0">
-                <StackPanel>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
                     <DataGrid x:Name="dgPedidos"
-                        ItemsSource="{Binding Vendas/Pedidos}"
-                        AutoGenerateColumns="False" 
-                        CanUserAddRows="False" 
-                        CanUserResizeColumns="False" 
-                        CanUserReorderColumns="False" 
-                        CanUserDeleteRows="False" 
-                        CanUserResizeRows="False" 
-                        IsReadOnly="True" 
-                        HeadersVisibility="Column"
-                        IsSynchronizedWithCurrentItem="True" 
-                        Style="{DynamicResource DatagridCustomMDesign}" 
-                        CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                        RowStyle="{DynamicResource DataGridRowCustomMDesign}"
-                        ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
-                              SelectionMode="Single" VerticalAlignment="Top">
+                              Grid.Row="0"
+                              ItemsSource="{Binding Pedidos}"
+                              AutoGenerateColumns="False" 
+                              CanUserAddRows="False" 
+                              CanUserResizeColumns="False" 
+                              CanUserReorderColumns="False" 
+                              CanUserDeleteRows="False" 
+                              CanUserResizeRows="False" 
+                              IsReadOnly="True" 
+                              HeadersVisibility="Column"
+                              IsSynchronizedWithCurrentItem="True" 
+                              Style="{DynamicResource DatagridCustomMDesign}" 
+                              CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+                              RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                              ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+                              SelectionMode="Single" VerticalAlignment="Top" Background="{x:Null}">
+                        <DataGrid.Resources>
+                            <ResourceDictionary>
+                                <ResourceDictionary.MergedDictionaries>
+                                    <ResourceDictionary Source="/FiscaliZi.Colinfo;component/Resources/Dictionaries/dicDatagrid.xaml"/>
+                                </ResourceDictionary.MergedDictionaries>
+                            </ResourceDictionary>
+                        </DataGrid.Resources>
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="PED" 
                                 Binding="{Binding NumPedido, Converter={StaticResource PedNumConverter}}" 
@@ -196,30 +211,58 @@
                         </DataGrid.Columns>
                     </DataGrid>
                     <Separator 
+                        Grid.Row="1"
                             Style="{StaticResource MaterialDesignDarkSeparator}" 
                             Margin="8 0 8 0"/>
-                    <ListView Background="#585858" Width="300" HorizontalAlignment="Left">
-                        <ListViewItem>
-                            <Grid Margin="15,5">
-                                <Expander Grid.Row="1">
-                                    <Expander.Header>
-                                        <TextBlock Foreground="#FFABADB3" Text="MenuTitle" FontSize="20" Grid.Row="0"/>
-                                    </Expander.Header>
-                                    <StackPanel 
+                    <Expander Grid.Row="2">
+                        <Expander.Header>
+                            <TextBlock Foreground="#FFABADB3" Text="Totais" FontSize="20" Grid.Row="0"/>
+                        </Expander.Header>
+                        <StackPanel 
                                 Orientation="Vertical"
                                 TextBlock.Foreground="{DynamicResource MaterialDesignBody}"
                                 Margin="5">
-                                        <DataGrid ItemsSource="{Binding Vendas}"/>
-                                        <MDesign:Card 
+                            <DataGrid x:Name="dgTotaisVenda"
+                                      ItemsSource="{Binding /, Converter={StaticResource TotalVendasConverter}}"
+                                      AutoGenerateColumns="False"
+                                      CanUserAddRows="False" 
+                                      CanUserResizeColumns="False" 
+                                      CanUserReorderColumns="False" 
+                                      CanUserDeleteRows="False" 
+                                      CanUserResizeRows="False" 
+                                      IsReadOnly="True" 
+                                      HeadersVisibility="Column"
+                                      IsSynchronizedWithCurrentItem="True" 
+                                      Style="{DynamicResource DatagridCustomMDesign}" 
+                                      CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
+                                      RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                                      ColumnHeaderStyle="{StaticResource CustomMaterialDesignDataGridColumnHeader}" 
+                                      SelectionMode="Single" VerticalAlignment="Top">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="PRODUTO" 
+                                                        Binding="{Binding Produto.Codigo}" 
+                                                        CanUserResize="False" />
+                                    <DataGridTextColumn Header="DESCRICAO" 
+                                                        Binding="{Binding Produto.Descricao}" 
+                                                        CanUserResize="False" />
+                                    <DataGridTextColumn Header="Q. CX" 
+                                                        Binding="{Binding QntCX}" 
+                                                        CanUserResize="False" />
+                                    <DataGridTextColumn Header="Q. UND" 
+                                                        Binding="{Binding QntUND}" 
+                                                        CanUserResize="False" />
+                                    <DataGridTextColumn Header="VALOR TOTAL" 
+                                                        Binding="{Binding ValorTotal}" 
+                                                        CanUserResize="False" />
+                                </DataGrid.Columns>
+                            </DataGrid>
+                            <MDesign:Card 
                                     Height="50" 
                                     Margin="0,0,0,5"
                                     MDesign:ShadowAssist.ShadowDepth="Depth0"/>
-                                    </StackPanel>
-                                </Expander>
-                            </Grid>
-                        </ListViewItem>
-                    </ListView>
-                </StackPanel>
+                        </StackPanel>
+                    </Expander>
+                </Grid>
             </GroupBox>
         </MDesign:Card>
         <MDesign:Card 
