--- a/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
+++ b/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
@@ -61,5 +61,9 @@
         <Setter Property="Foreground" Value="{DynamicResource MaterialDesignColumnHeader}" />
     </Style>
 
+    <Style x:Key="DataGridColumnHeader_DetalhePedido" TargetType="{x:Type DataGridColumnHeader}" BasedOn="{StaticResource CustomMaterialDesignDataGridColumnHeader}">
+        <Setter Property="Foreground" Value="{DynamicResource IdealForegroundColorBrush}" />
+    </Style>
+
 
 </ResourceDictionary>
