--- a/FiscaliZi.Colinfo/Assets/ColetaView.xaml
+++ b/FiscaliZi.Colinfo/Assets/ColetaView.xaml
@@ -124,7 +124,7 @@
             MinHeight="700" 
             UniformCornerRadius="0" 
             Margin="5,0,0,0"
-            DataContext="{Binding Vendas}" Width="525" Height="700">
+            DataContext="{Binding Vendas}" Width="515" Height="700">
             <GroupBox Header="PEDIDOS" 
                           Margin="3"
                           MDesign:ShadowAssist.ShadowDepth="Depth1"
@@ -188,13 +188,14 @@
                                 Width="200" />
                             <DataGridTextColumn Header="VAL. PED" 
                                 Binding="{Binding Items, Converter={StaticResource TotalValItemsConverter}}" 
-                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
+                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellRightAlign}"
                                 CanUserResize="False"
                                 Width="75" />
                             <DataGridTextColumn Header="PESO" 
                                                 Binding="{Binding Converter={StaticResource PesoPedidoConverter}}"
+                                                CellStyle="{StaticResource DatagridCellCustomMDesign_CellRightAlign}"
                                                 CanUserResize="False"
-                                                Width="75" />
+                                                Width="50" />
                         </DataGrid.Columns>
                     </DataGrid>
                     <Separator 
@@ -231,14 +232,17 @@
                                     <DataGridTextColumn Header="DESCRICAO" 
                                                         Binding="{Binding Produto.Descricao}" 
                                                         CanUserResize="False" />
-                                    <DataGridTextColumn Header="Q. CX" 
+                                    <DataGridTextColumn Header="CX" 
                                                         Binding="{Binding QntCX}" 
+                                                        CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                                                         CanUserResize="False" />
-                                    <DataGridTextColumn Header="Q. UND" 
+                                    <DataGridTextColumn Header="UND" 
                                                         Binding="{Binding QntUND}" 
+                                                        CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                                                         CanUserResize="False" />
-                                    <DataGridTextColumn Header="VALOR TOTAL" 
-                                                        Binding="{Binding ValorTotal}" 
+                                    <DataGridTextColumn Header="V. TOTAL" 
+                                                        Binding="{Binding ValorTotal, StringFormat=\{0:N2\}}" 
+                                                        CellStyle="{StaticResource DatagridCellCustomMDesign_CellRightAlign}"
                                                         CanUserResize="False" />
                                 </DataGrid.Columns>
                             </DataGrid>
@@ -269,7 +273,7 @@
                           IsSynchronizedWithCurrentItem="True" 
                           Style="{DynamicResource DatagridCustomMDesign}" 
                           CellStyle="{DynamicResource DatagridCellCustomMDesign}" 
-                          RowStyle="{DynamicResource DataGridRowCustomMDesign}"
+                          RowStyle="{DynamicResource DataGridRow_DetalhePedido}"
                           ColumnHeaderStyle="{StaticResource DataGridColumnHeader_DetalhePedido}" 
                           SelectionMode="Single" Height="700" Background="{DynamicResource AccentColorBrush}" Foreground="{DynamicResource AccentSelectedColorBrush}">
                     <DataGrid.Columns>
@@ -293,11 +297,13 @@
                                             CellStyle="{StaticResource DatagridCellCustomMDesign_CellCenter}"
                                             CanUserResize="False" />
                         <DataGridTextColumn Header="V. UND" 
-                            Binding="{Binding ValorUnid}"
-                            CanUserResize="False" />
+                                            Binding="{Binding ValorUnid, StringFormat=\{0:N2\}}"
+                                            CellStyle="{StaticResource DatagridCellCustomMDesign_CellRightAlign}"
+                                            CanUserResize="False" />
                         <DataGridTextColumn Header="V. TOTAL" 
-                            Binding="{Binding ValorTotal}"
-                            CanUserResize="False" />
+                                            Binding="{Binding ValorTotal, StringFormat=\{0:N2\}}"
+                                            CellStyle="{StaticResource DatagridCellCustomMDesign_CellRightAlign}"
+                                            CanUserResize="False" />
                     </DataGrid.Columns>
                 </DataGrid>
 
